syntax = "proto3";

package supplier;

service SupplierService {
  rpc CreateSupplier (SupplierRequest) returns (Result);
}

message SupplierRequest {
    string id = 1;
    string country = 2;
    string name = 3;
    int32 vatNumber = 4;
    repeated string roles = 5;
    repeated string sectors = 6;
    repeated bytes certificates = 7;
}
message Result {
  int32 status = 1;
  string message = 2;
}